--- a/presto-product-tests/conf/docker/common/jdbc_db.yml
+++ b/presto-product-tests/conf/docker/common/jdbc_db.yml
@@ -24,3 +24,12 @@ services:
       MYSQL_PASSWORD: swarm
       MYSQL_ROOT_PASSWORD: swarm
       MYSQL_DATABASE: test
+
+  sqlserver:
+    hostname: sqlserver
+    image: 'microsoft/mssql-server-linux'
+    ports:
+      - '1433:1433'
+    environment:
+      ACCEPT_EULA: Y
+      SA_PASSWORD: SQLServerPass1
