--- a/.travis.yml
+++ b/.travis.yml
@@ -70,6 +70,11 @@ script:
         singlenode-kerberos-hdfs-impersonation -g storage_formats,cli,hdfs_impersonation,authorization
     fi
   - |
+    if [[ -v PRODUCT_TESTS ]]; then
+      presto-product-tests/bin/run_on_docker.sh \
+        singlenode-sqlserver -g sqlserver
+    fi
+  - |
     if [[ -v HIVE_TESTS ]]; then
       presto-hive-hadoop2/bin/run_on_docker.sh
     fi
